nemu/include/cpu/instr/.err
lidt.h:2:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(lidt);
                ^
